test fix for bug on mobile - height issue for nav menu

--- a/styles/components/_primary-nav.scss
+++ b/styles/components/_primary-nav.scss
@@ -4,8 +4,7 @@
     bottom: 0;
     padding-top: 90px;
     left: -100%;
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
+    min-height: 110vh;
     width: 100%;
     background-color: $c-dark-green;
     transition: 0.5s;
