--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,10 +19,6 @@
   box-sizing: border-box;
 }
 
-html {
-  height: -webkit-fill-available;
-}
-
 main {
   padding-top: 90px;
   position: relative;
